--- a/projects/responsive-design/tribute-page/resources/css/style.css
+++ b/projects/responsive-design/tribute-page/resources/css/style.css
@@ -21,30 +21,42 @@
 }
 
 h1 {
-  font-family: "Montez", cursive;
-  font-size: 4rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
+  font-size: 3.6rem;
 }
 
 h3 {
-  font-size: 3rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 2.4rem;
 }
 
 #image {
+  height: auto;
   max-width: 100%;
+  border-radius: 2%;
+  display: block;
+}
+
+.facts,
+.fact {
+  margin: 2%;
 }
 
 .text {
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1.4rem;
 }
 
 .conclusion {
+  font-family: "Montez", cursive;
   font-size: 2.4rem;
+  font-style: italic;
 }
 
 #tribute-info {
   width: auto;
-  margin: 5%;
+  margin: 2%;
 }
 
 /* @media all and (max-width: 1024px) {
